--- a/App.config
+++ b/App.config
@@ -1,6 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <FTC_Timer_Display.Properties.Settings>
+            <setting name="FieldList" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SoundLocation" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="LastMode" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LastDivision" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="LastDivisionName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastFieldID" serializeAs="String">
+                <value>1</value>
+            </setting>
+        </FTC_Timer_Display.Properties.Settings>
+    </userSettings>
 </configuration>
