Final push to make milestone this weekend. Started #2. Ready for action!

--- a/App.config
+++ b/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -28,6 +31,22 @@
             <setting name="LastFieldID" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="ScoringServerLocation" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ScoringScroll" serializeAs="String">
+                <value>10</value>
+            </setting>
         </FTC_Timer_Display.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <FTC_Timer_Display.Properties.Settings>
+            <setting name="DeadFieldDelay" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="DefaultScoringPort" serializeAs="String">
+                <value>5656</value>
+            </setting>
+        </FTC_Timer_Display.Properties.Settings>
+    </applicationSettings>
 </configuration>
