--- a/FTC-Timer-Display.csproj
+++ b/FTC-Timer-Display.csproj
@@ -52,11 +52,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClockFace.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ClockFace.Designer.cs">
+      <DependentUpon>ClockFace.cs</DependentUpon>
+    </Compile>
     <Compile Include="ctrlTimeLengthEntry.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ctrlTimeLengthEntry.Designer.cs">
       <DependentUpon>ctrlTimeLengthEntry.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FontLoader.cs" />
+    <Compile Include="frmPitDisplay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPitDisplay.Designer.cs">
+      <DependentUpon>frmPitDisplay.cs</DependentUpon>
     </Compile>
     <Compile Include="frmRemoteFieldCreate.cs">
       <SubType>Form</SubType>
@@ -64,11 +77,23 @@
     <Compile Include="frmRemoteFieldCreate.Designer.cs">
       <DependentUpon>frmRemoteFieldCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSetScoringServer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSetScoringServer.Designer.cs">
+      <DependentUpon>frmSetScoringServer.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTimings.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmTimings.Designer.cs">
       <DependentUpon>frmTimings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MatchPeriodCtrl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MatchPeriodCtrl.Designer.cs">
+      <DependentUpon>MatchPeriodCtrl.cs</DependentUpon>
     </Compile>
     <Compile Include="MatchTimingData.cs" />
     <Compile Include="frmDisplay.cs">
@@ -91,11 +116,28 @@
     </Compile>
     <Compile Include="InitialData.cs" />
     <Compile Include="MatchData.cs" />
+    <Compile Include="PeriodProgressBar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PeriodProgressBar.Designer.cs">
+      <DependentUpon>PeriodProgressBar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PitData.cs" />
+    <Compile Include="PitFieldDisplay.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PitFieldDisplay.Designer.cs">
+      <DependentUpon>PitFieldDisplay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleClient.cs" />
     <Compile Include="SoundGenerator.cs" />
     <Compile Include="UdpComms.cs" />
+    <Compile Include="UdpContainer.cs" />
+    <EmbeddedResource Include="ClockFace.resx">
+      <DependentUpon>ClockFace.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ctrlTimeLengthEntry.resx">
       <DependentUpon>ctrlTimeLengthEntry.cs</DependentUpon>
     </EmbeddedResource>
@@ -108,11 +150,26 @@
     <EmbeddedResource Include="frmModeSelection.resx">
       <DependentUpon>frmModeSelection.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmPitDisplay.resx">
+      <DependentUpon>frmPitDisplay.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmRemoteFieldCreate.resx">
       <DependentUpon>frmRemoteFieldCreate.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmSetScoringServer.resx">
+      <DependentUpon>frmSetScoringServer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTimings.resx">
       <DependentUpon>frmTimings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatchPeriodCtrl.resx">
+      <DependentUpon>MatchPeriodCtrl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PeriodProgressBar.resx">
+      <DependentUpon>PeriodProgressBar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PitFieldDisplay.resx">
+      <DependentUpon>PitFieldDisplay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -138,6 +195,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\7LED.ttf" />
+    <None Include="Resources\Crysta.ttf" />
     <None Include="Resources\DisplayBackgroundHD.png" />
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +206,8 @@
     <None Include="Resources\gamelogo.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\LCDPHONE.TTF" />
+    <None Include="Resources\triple_dot_digital-7.ttf" />
     <None Include="Resources\Wdigitoff.png" />
   </ItemGroup>
   <ItemGroup>
@@ -252,6 +313,43 @@
     <None Include="Resources\Rdigitoff.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\d0.png" />
+    <None Include="Resources\d1.png" />
+    <None Include="Resources\d2.png" />
+    <None Include="Resources\d3.png" />
+    <None Include="Resources\d4.png" />
+    <None Include="Resources\d6.png" />
+    <None Include="Resources\d7.png" />
+    <None Include="Resources\d8.png" />
+    <None Include="Resources\d9.png" />
+    <None Include="Resources\d5.png" />
+    <None Include="Resources\dX.png" />
+    <None Include="Resources\e0.png" />
+    <None Include="Resources\e1.png" />
+    <None Include="Resources\e2.png" />
+    <None Include="Resources\e3.png" />
+    <None Include="Resources\e4.png" />
+    <None Include="Resources\e5.png" />
+    <None Include="Resources\e6.png" />
+    <None Include="Resources\e7.png" />
+    <None Include="Resources\e8.png" />
+    <None Include="Resources\e9.png" />
+    <None Include="Resources\j0.png" />
+    <None Include="Resources\j1.png" />
+    <None Include="Resources\j2.png" />
+    <None Include="Resources\j3.png" />
+    <None Include="Resources\j4.png" />
+    <None Include="Resources\j5.png" />
+    <None Include="Resources\j6.png" />
+    <None Include="Resources\j7.png" />
+    <None Include="Resources\j8.png" />
+    <None Include="Resources\j9.png" />
+    <None Include="Resources\vaf-logo.png" />
+    <None Include="Resources\indicator-blue.png" />
+    <None Include="Resources\indicator-green.png" />
+    <None Include="Resources\indicator-red.png" />
+    <None Include="Resources\indicator-yellow.png" />
+    <None Include="Resources\ccShareAlike.png" />
     <Content Include="Sounds\charge.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
