--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -20,5 +20,17 @@
     <Setting Name="LastFieldID" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="DeadFieldDelay" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
+    <Setting Name="DefaultScoringPort" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">5656</Value>
+    </Setting>
+    <Setting Name="ScoringServerLocation" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ScoringScroll" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
