Fixed #33, removed unused resources. Added sound testing.

--- a/App.config
+++ b/App.config
@@ -37,6 +37,9 @@
             <setting name="ScoringScroll" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="showHelp" serializeAs="String">
+                <value>True</value>
+            </setting>
         </FTC_Timer_Display.Properties.Settings>
     </userSettings>
     <applicationSettings>
