--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="ScoringScroll" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="showHelp" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
