Fixed #36, Fixed 35, Fixed 34, others

--- a/App.config
+++ b/App.config
@@ -40,6 +40,21 @@
             <setting name="showHelp" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="customLogoPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="displayShowDateTime" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="isMultiDivision" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="eventType" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="autoElimTimeouts" serializeAs="String">
+                <value>True</value>
+            </setting>
         </FTC_Timer_Display.Properties.Settings>
     </userSettings>
     <applicationSettings>
