--- a/FTC-Timer-Display.csproj
+++ b/FTC-Timer-Display.csproj
@@ -85,6 +85,12 @@
     <Compile Include="frmSetScoringServer.Designer.cs">
       <DependentUpon>frmSetScoringServer.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSoundTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleClient.cs" />
+    <Compile Include="SingleClientDisplay.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SingleClientDisplay.Designer.cs">
+      <DependentUpon>SingleClientDisplay.cs</DependentUpon>
+    </Compile>
     <Compile Include="SoundGenerator.cs" />
     <Compile Include="UdpComms.cs" />
     <Compile Include="UdpContainer.cs" />
@@ -174,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSetScoringServer.resx">
       <DependentUpon>frmSetScoringServer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSoundTest.resx">
       <DependentUpon>frmSoundTest.cs</DependentUpon>
@@ -203,6 +218,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SingleClientDisplay.resx">
+      <DependentUpon>SingleClientDisplay.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
