Moved to custom field list control.

--- a/App.config
+++ b/App.config
@@ -55,6 +55,9 @@
             <setting name="autoElimTimeouts" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="preventRunningMovement" serializeAs="String">
+                <value>True</value>
+            </setting>
         </FTC_Timer_Display.Properties.Settings>
     </userSettings>
     <applicationSettings>
