--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="autoElimTimeouts" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="preventRunningMovement" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
