v 15.1512.29 Version number method changed to date-based. Major UI upgrades. Added option to speak countdown. Major systems improvements.

--- a/App.config
+++ b/App.config
@@ -58,6 +58,9 @@
             <setting name="preventRunningMovement" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="useCountdown" serializeAs="String">
+                <value>False</value>
+            </setting>
         </FTC_Timer_Display.Properties.Settings>
     </userSettings>
     <applicationSettings>
