Started Logging Implementation & Scoring Implementation

--- a/FTC-Timer-Display/App.config
+++ b/FTC-Timer-Display/App.config
@@ -7,6 +7,7 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="FTC_Timer_Display.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -73,4 +74,8 @@
             </setting>
         </FTC_Timer_Display.Properties.Settings>
     </applicationSettings>
+    <appSettings>
+        <!-- Enable log4net debugging-->
+        <add key ="log4net.Internal.Debug" value="false"/>
+    </appSettings>
 </configuration>
